[tool.poetry]
name = "rafa-care"
version = "1.1.2"
description = ""
authors = ["Thiago da Cunha Borges <thiagoborges@id.uff.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
dynaconf = "^3.1.4"
Flask-Migrate = "^3.0.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.9.1"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
